--- a/angular.json
+++ b/angular.json
@@ -13,7 +13,8 @@
         "build": {
           "builder": "@angular-devkit/build-angular:browser",
           "options": {
-            "outputPath": "dist/gifs-app",
+            "outputPath": "docs",
+            "baseHref": "./",
             "index": "src/index.html",
             "main": "src/main.ts",
             "polyfills": [
